product page cols fixed on mobile

--- a/NoTW/assets/tailwind.css
+++ b/NoTW/assets/tailwind.css
@@ -989,6 +989,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
